--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,37 +2,44 @@ spring:
   application:
     name: diurnal-interaction-service
     heroku: ${spring.application.name}.herokuapp.com
-  profiles:
-    active: ${SPRING_PROFILE:local}
   security:
     user:
       name: ${SPRING_SECURITY_USERNAME:user}
       password: ${SPRING_SECURITY_CRED:default}
 
-server:
-  port: ${SERVER_PORT:25642}
+quarkus:
+  profile: ${SPRING_PROFILE:local}
+  security:
+    users:
+      embedded:
+        enabled: true
+        plain-text: true
+        roles:
+          itachi: user
+        users:
+          itachi: ${INTERACTION_USER_CRED}
+  swagger-ui:
+    path: /swagger-ui
+    always-include: true
+  http:
+    port: ${SERVER_PORT:25642}
+  log:
+    level: ${LOGGING:INFO}
 
 mail:
   smtp:
     host: smtp.gmail.com
     port: 587
     auth: true
-    starttls:
-      enable: true
+    starttls-enable: true
   from: ${MAIL_DAILY_BILLZ}
   user: ${MAIL_DAILY_BILLZ}
   cred: ${MAIL_DAILY_BILLZ_CREDENTIAL}
   otp:
     title: ${MAIL_DAILY_BILLZ_TITLE:Your Daily Billz OTP is here}
     body: "OTP valid for next <b>%d minutes</b>: <b><u>%s</u></b>"
-    timeout:
-      minutes: ${MAIL_OTP_TIMEOUT_MINUTES:11}
+    timeout-minutes: ${MAIL_OTP_TIMEOUT_MINUTES:11}
 
 otp:
-  mail:
-    length: ${OTP_MAIL_LENGTH:8}
-  sms:
-    length: ${OTP_SMS_LENGTH:8}
-
-
-logging.level.org.springframework.web: ${LOGGING:INFO}
+  mail-length: ${OTP_MAIL_LENGTH:8}
+  sms-length: ${OTP_SMS_LENGTH:8}
