--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,14 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>${heroku-maven.version}</version>
+                <configuration>
+                    <appName>${project.artifactId}</appName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
