--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,3 +5,10 @@ mail:
 
 token:
   expiry: 60
+
+quarkus:
+  datasource:
+    jdbc:
+      url: jdbc:postgresql://localhost:${CRDB_PORT}/${CRDB_DB}
+    username: root
+    password:
