--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,3 +2,14 @@ mail:
   otp:
     timeout:
       minutes: 10
+
+token:
+  expiry: 960
+
+quarkus:
+  datasource:
+    jdbc:
+      url: ${JDBC_DATABASE_URL}
+    # https://devcenter.heroku.com/articles/connecting-to-relational-databases-on-heroku-with-java#using-the-jdbc_database_url -- for quarkus
+    # Use https://devcenter.heroku.com/articles/connecting-to-relational-databases-on-heroku-with-java#using-the-database_url-in-plain-jdbc
+    # to convert heroku's provided DATABASE_URL to jvm friendly VM param locally. Not in prod.
