--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.version>2.4.0.Final</quarkus.platform.version>
         <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-        <protobuf-util.version>3.19.1</protobuf-util.version>
+        <protobuf-util.version>3.21.4</protobuf-util.version>
         <sun-mail.version>1.6.2</sun-mail.version>
         <heroku-maven.version>3.0.4</heroku-maven.version>
         <lombok.version>1.18.22</lombok.version>
@@ -85,6 +85,11 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
+            <version>${protobuf-util.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
             <version>${protobuf-util.version}</version>
         </dependency>
         <dependency>
